[gd_scene load_steps=4 format=3 uid="uid://b78pvtbmqfxb8"]

[ext_resource type="Script" path="res://Scripts/game.gd" id="1_85ay0"]
[ext_resource type="PackedScene" uid="uid://dkishjne3o4xg" path="res://Scenes/BoardPieces/board.tscn" id="1_bdg8l"]
[ext_resource type="PackedScene" uid="uid://dbnha4yeun24" path="res://Scenes/BoardPieces/DicePanel.tscn" id="2_ft8uv"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_85ay0")

[node name="PlayerBoard" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 774.0
offset_top = 80.0
offset_right = 1124.0
offset_bottom = 480.0
grow_vertical = 2
scale = Vector2(1.15324, 1.14217)

[node name="Board" parent="PlayerBoard" instance=ExtResource("1_bdg8l")]
layout_mode = 2

[node name="OpponentBoard" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -1157.0
offset_top = -539.0
offset_right = -807.0
offset_bottom = -139.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(1.18696, 1.142)

[node name="Board" parent="OpponentBoard" instance=ExtResource("1_bdg8l")]
layout_mode = 2

[node name="PlayerPan" parent="." instance=ExtResource("2_ft8uv")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 589.0
offset_top = -172.0
offset_right = 689.0
offset_bottom = -72.0
grow_vertical = 0

[node name="OpponentPan" parent="." instance=ExtResource("2_ft8uv")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -714.0
offset_top = -1028.0
offset_right = -614.0
offset_bottom = -928.0
grow_horizontal = 0
grow_vertical = 0

[node name="TurnLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 519.0
offset_top = 523.0
offset_right = 608.0
offset_bottom = 546.0
text = "Player Turn"

[node name="ColA" type="Label" parent="."]
layout_mode = 0
offset_left = 798.0
offset_top = 579.0
offset_right = 838.0
offset_bottom = 602.0
size_flags_horizontal = 4
size_flags_vertical = 1
text = "---"
horizontal_alignment = 1

[node name="ColB" type="Label" parent="."]
layout_mode = 0
offset_left = 915.0
offset_top = 579.0
offset_right = 955.0
offset_bottom = 602.0
size_flags_horizontal = 4
size_flags_vertical = 1
text = "---"
horizontal_alignment = 1

[node name="ColC" type="Label" parent="."]
layout_mode = 0
offset_left = 1057.0
offset_top = 580.0
offset_right = 1097.0
offset_bottom = 603.0
size_flags_horizontal = 4
size_flags_vertical = 1
text = "---"
horizontal_alignment = 1

[node name="ColA2" type="Label" parent="."]
layout_mode = 0
offset_left = 803.0
offset_top = 464.0
offset_right = 843.0
offset_bottom = 487.0
text = "---"
horizontal_alignment = 1

[node name="ColB2" type="Label" parent="."]
layout_mode = 0
offset_left = 941.0
offset_top = 464.0
offset_right = 981.0
offset_bottom = 487.0
text = "---"
horizontal_alignment = 1

[node name="ColC2" type="Label" parent="."]
layout_mode = 0
offset_left = 1070.0
offset_top = 464.0
offset_right = 1110.0
offset_bottom = 487.0
text = "---"
horizontal_alignment = 1

[node name="PlayerScore" type="Label" parent="."]
layout_mode = 0
offset_left = 795.0
offset_top = 525.0
offset_right = 835.0
offset_bottom = 548.0

[node name="OpponentScore" type="Label" parent="."]
layout_mode = 0
offset_left = 1065.0
offset_top = 525.0
offset_right = 1105.0
offset_bottom = 548.0

[node name="RetryButton" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 1199.0
offset_top = 633.0
offset_right = 1250.0
offset_bottom = 664.0
text = "Reset"

[node name="NextRoundButton" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 1183.0
offset_top = 670.0
offset_right = 1283.0
offset_bottom = 701.0
text = "Next Round"

[node name="php" type="Label" parent="."]
layout_mode = 0
offset_left = 598.0
offset_top = 853.0
offset_right = 681.0
offset_bottom = 876.0
text = "Player HP: "

[node name="ohp" type="Label" parent="."]
layout_mode = 0
offset_left = 1190.0
offset_top = 183.0
offset_right = 1303.0
offset_bottom = 206.0
text = "Opponent HP: "

[node name="Cheat" type="Button" parent="."]
layout_mode = 0
offset_left = 195.0
offset_top = 126.0
offset_right = 254.0
offset_bottom = 157.0
text = "CHEAT"

[node name="BestButton" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 614.0
offset_top = 460.0
offset_right = 770.0
offset_bottom = 491.0
scale = Vector2(5, 5)
text = "YOU ARE THE BEST!"

[connection signal="pressed" from="Cheat" to="." method="_on_cheat_pressed"]
[connection signal="pressed" from="BestButton" to="." method="_on_best_button_pressed"]
